--- a/ecommerce-mobile/package.json
+++ b/ecommerce-mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommerce-mobile",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,22 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.33",
-    "expo-constants": "~17.0.5",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo": "~52.0.35",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native": "0.76.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true
